--- a/src/app/files/footer/footer.component.html
+++ b/src/app/files/footer/footer.component.html
@@ -9,40 +9,48 @@
   <title>Footer Example</title>
 </head>
 <body>
-  <footer class="mt-4">
-    <div class="container py-4">
-      <div class="row">
-        <div class="col-md-4">
-          <h5 class="fw-bold" >About Us</h5>
+  <footer class="mt-4" data-aos="fade-up">
+    <div class="container py-4 text-center">
+      <div class="row" data-aos="fade-up">
+        <div class="col-md-4" data-aos="fade-up">
+          <h5 class="fw-bold h20" >About Us</h5>
           <div class="d-block d-md-flex  align-items-center">
              <img src="assets/logo.jpg" class="logs" alt="logo" srcset="">
             <h6 class="fw-bolder mx-md-2 my-2 my-md-0 text-success">B<span class="text-dark">u</span>d<span class="text-dark">g</span>e<span class="text-dark">t</span> E<span class="text-dark">a</span>s<span class="text-dark">e</span></h6>
           </div>
           <p>We provide innovative budgeting solutions to help you manage your finances effortlessly and achieve your financial goals.</p>
         </div>
-        <div class="col-md-4">
-          <h5 class="fw-bold">Quick Links</h5>
+        <div class="col-md-4" data-aos="fade-up">
+          <h5 class="fw-bold h20">Quick Links</h5>
           <ul class="list-unstyled">
             <li><a routerLink="/Home"><i class="bi bi-house"></i> <span class="text-dark px-2">Home</span></a></li>
             <li><a routerLink="/create"><i class="bi bi-plus"></i> <span class="text-dark px-2">Create</span></a></li>
             <li><a routerLink="/view"><i class="bi bi-view-list"></i> <span class="text-dark px-2">View</span></a></li>
           </ul>
         </div>
-        <div class="col-md-4">
-          <h5 class="fw-bold">Contact Developer</h5>
-          <ul class="contact-icons d-flex d-md-block justify-content-start align-items-center list-unstyled">
-            <li><a href="mailto:adeyemiawosemo@gmail.com" class="text-success"><i class="bi bi-envelope"></i></a></li>
-            <li><a href="https://wa.me/09052504906" class="text-success"><i class="bi bi-whatsapp"></i></a></li>
-            <li><a href="tel:09164868473" class="text-success"><i class="bi bi-telephone"></i> <span class="text-dark px-2 fs-6"> 09164868473</span></a></li>
+        <div class="col-md-4 mx-auto" data-aos="fade-up">
+          <h5 class="fw-bold h20">Contact Developer</h5>
+          <ul class=" list-unstyled">
+           
+            <li class="d-flex justify-content-center"><a href="mailto:adeyemiawosemo@gmail.com" class="text-success d-flex align-items-center"><i class="bi bi-envelope"></i> <span class="text-dark px-2 fs-6" > Gmail</span></a></li>
+            <li class="d-flex justify-content-center"><a href="https://wa.me/09052504906" class="text-success d-flex align-items-center"> <i class="bi bi-whatsapp"></i> <span class="text-dark px-2 fs-6" > Whatsapp</span></a></li>
+            <li class="d-flex justify-content-center"><a href="tel:09164868473" class="text-success d-flex align-items-center"><i class="bi bi-telephone"></i> <span class="text-dark px-2 fs-6"> 09164868473</span></a></li>
           </ul>
         </div>
       </div>
-      <div class="row mt-4">
+      <div class="row mt-4" data-aos="fade-up">
         <div class="col text-center border border-1 p-2 border-dark">
           <p class="mb-0">&copy; 2024 BudgetList. All Rights Reserved.</p>
         </div>
       </div>
+
+   
     </div>
   </footer>
+  <div class="noq">
+    <p class="">
+     <a class="text-decoration-none gud" href="https://wa.me/09052504906"> <i class="bi bi-whatsapp"></i></a>
+    </p>
+  </div>
 </body>
 </html>
