--- a/src/app/files/navbar/navbar.component.html
+++ b/src/app/files/navbar/navbar.component.html
@@ -10,28 +10,29 @@
 <header>
     <nav class="navbar navbar-expand-lg navbar-light px-3">
         <div class="container-fluid d-flex justify-content-between align-items-center">
-           <a class="navbar-brand d-flex align-items-center" href="#">
-        <img src="assets/logo.jpg" alt="Logo" class="logo">
-        <span class="brand-text ms-1 text-success">B<span class="cof">u</span>d<span class="cof">g</span>e<span class="cof">t</span> E<span class="cof">a</span>s<span class="cof">e</span></span>
-      </a>
-            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-                <span class="navbar-toggler-icon"></span>
-            </button>
-            <div class="collapse navbar-collapse" id="navbarNav">
-                <ul class="navbar-nav ml-auto">
-                    <li class="nav-item">
-                        <a class="nav-link mx-3 " routerLink="/Home"><i class="bi bi-house"></i>  <span class="px-1 fw-bold">Home</span></a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link mx-3" routerLink="/create"><i class="bi bi-plus"></i> <span class="px-1 fw-bold">Create</span></a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link mx-3" routerLink="/view"><i class="bi bi-view-list"></i> <span class="px-1 fw-bold">View</span></a>
-                    </li>
-                </ul>
-            </div>
+          <a class="navbar-brand d-flex align-items-center" href="#">
+            <img src="assets/logo.jpg" alt="Logo" class="logo">
+            <span class="brand-text ms-1 text-success">B<span class="cof">u</span>d<span class="cof">g</span>e<span class="cof">t</span> E<span class="cof">a</span>s<span class="cof">e</span></span>
+          </a>
+          <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+          </button>
+          <div class="collapse navbar-collapse" id="navbarNav">
+            <ul class="navbar-nav ml-auto">
+              <li class="nav-item">
+                <a class="nav-link mx-3" routerLink="/Home" (click)="closeNavbar()"><i class="bi bi-house"></i> <span class="px-1 fw-bold">Home</span></a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link mx-3" routerLink="/create" (click)="closeNavbar()"><i class="bi bi-plus"></i> <span class="px-1 fw-bold">Create</span></a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link mx-3" routerLink="/view" (click)="closeNavbar()"><i class="bi bi-view-list"></i> <span class="px-1 fw-bold">View</span></a>
+              </li>
+            </ul>
+          </div>
         </div>
-    </nav>
+      </nav>
+      
 </header> 
 </body>
 </html>
