--- a/src/app/files/create/create.component.css
+++ b/src/app/files/create/create.component.css
@@ -193,4 +193,33 @@ blockquote-footer {
       opacity: 1;
     }
   }
+  .bolu{
+    border-radius: 0 30px 0 30px;
+    height: 200px;
+    width: 30%;
+    text-align: center;
+    box-shadow: 2px 2px 10px green;
+    padding: 20px;
+
+}
+.h20{
+    text-shadow: 2px 2px 2px  green;
+    font-size: 30px ;
+    /* background-color: rebeccapurple; */
+}
+
+@media (max-width:1000px) {
+  .bolu{
+    height: max-content;
+    width: 80%;
+    /* padding: 40px 0; */
+}
+.band{
+  /* background-image: url("assets/shopping1.jpg") !important; */
+  object-fit: cover;
+  background-size: cover;
+  background-position: center;
+  background-repeat: no-repeat;
+}
+}
   
