--- a/src/app/files/displaybudget/displaybudget.component.css
+++ b/src/app/files/displaybudget/displaybudget.component.css
@@ -80,12 +80,30 @@ body{
     padding: 0.75rem;
     vertical-align: top;
     border-top: 1px solid #dee2e6;
+    
+    /* background-color: red !important; */
   }
   
   .table-striped tbody tr:nth-of-type(odd) {
     background-color: rgba(0, 0, 0, 0.05);
     
   }
+  .notification {
+    /* font-family: 'Poppins', sans-serif; */
+    font-size: 1rem;
+    color: white;
+    background-color: rgba(0, 0, 0, 0.642);
+    padding: 8px;
+    border-radius: 5px;
+    text-align: center;
+    box-shadow: 1px 1px 1px 2px gold ;
+    margin-top: 10px;
+}
+.h20{
+  text-shadow: 2px 2px 2px  green;
+  font-size: 30px ;
+  /* background-color: rebeccapurple; */
+}
   
   .table-bordered {
     border: 1px solid #dee2e6;
