--- a/src/app/files/displaybudget/displaybudget.component.html
+++ b/src/app/files/displaybudget/displaybudget.component.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <section class="mx-auto border shadow shadow-lg p-2 border-1 border-success col-1- col-md-12 goal ">
-        <main class="d-flex justify-content-between align-items-center">
+        <main class="d-flex justify-content-between align-items-center" data-aos="fade-up">
             <div class="bg-light-subtle shadow shadow-lg rounded rounded-2  p-2">
                 <p class="fw-bold">Budget INFO : <span class="fw-light">{{budgetInfo.budgetName || budgetInfo.dateCreated}}</span></p>
                 <p class="fw-bold">Budget AMT : <span class="fw-light">#{{budgetInfo.budgetPrice}}</span></p>
@@ -21,9 +21,9 @@
               <p class="fw-bold">Item Remaining : <span>{{ unpurchasedItemCount }}</span></p>
             </div>
         </main> 
-        <main class="container-fluid d-block d-md-flex  justify-content-between align-items-start p-4 bg-light">
+        <main class="container-fluid d-block d-md-flex  justify-content-between align-items-start p-4 bg-light" data-aos="fade-up">
             <div class="col-12 col-md-4 me-4 p-3 bg-white shadow-sm rounded mb-3 bg-dark">
-              <h6 class="mb-4 text-center text-success">Create Item List</h6>
+              <h6 class="mb-4 text-center  h20">Create Item List</h6>
               <form [formGroup]="itemForm" (ngSubmit)="addCart()" class="mb-4">
                 <div class="mb-3">
                   <label for="name" class="form-la[bel">Item Name</label>
@@ -75,8 +75,9 @@
               
             </div>
           
-            <div class="w-100 w-md-70 p-3 bg-white  shadow-sm rounded">
-              <h6 class="mb-4 text-center text-success">Item List</h6>
+            <div class="w-100 w-md-70 p-3 bg-white  shadow-sm rounded" data-aos="fade-up" >
+              <h6 class="mb-4 text-center h20">Item List</h6>
+              <p class="notification d-block d-md-none" >Swipe left to view more</p>
               <div class="table-responsive">
                 <table class="table table-striped table-bordered">
                   <thead class="thead-dark">
@@ -90,6 +91,7 @@
                     </tr>
                   </thead>
                   <tbody>
+                   
                     <tr *ngIf="fetchItemList.length === 0">
                       <td colspan="6" class="text-center">
                         <p>Your shopping cart is currently empty. Start adding items to see them here. 🛒</p>
@@ -97,7 +99,7 @@
                     </tr>
                     <tr class="text-center" *ngFor="let el of fetchItemList; let id = index">
                       <td>{{ id + 1 }}</td>
-                      <td>{{ el.itemName }}</td>
+                      <td class="">{{ el.itemName }}</td>
                       <td>
                         <button class="btn btn-outline-success"  (click)="viewItem(el._id)">
                           <span class="material-symbols-outlined">visibility</span>
@@ -131,7 +133,7 @@
               
             </div>
           </main>
-          <main class="text-center">
+          <main class="text-center" data-aos="fade-up">
             <button routerLink="/view" class="btn btn-outline-success me-3">View All Budgets</button>
             <button routerLink="/create" class="btn btn-success">Create New Budget</button>
           </main>
