--- a/src/app/files/home/home.component.css
+++ b/src/app/files/home/home.component.css
@@ -54,12 +54,27 @@ body{
     text-align: center;
 }
 .carousel-item{
-
+     border-radius: 0 50px 0 50% !important;
     height: 90vh;
 }
 .try{
     height: fit-content;
     object-fit: cover;
+    /* border: 0 50% 0 50%; */
+}
+.bolu{
+    border-radius: 0 30px 0 30px;
+    height: 200px;
+    width: 30%;
+    text-align: center;
+    box-shadow: 2px 2px 10px green;
+    padding: 20px;
+
+}
+.h20{
+    text-shadow: 1px 1px 2px  green;
+    font-size: 30px ;
+    /* background-color: rebeccapurple; */
 }
 @media (max-width:750px) {
     .hero-section{
@@ -77,4 +92,10 @@ body{
         
         height: 60vh;
     }
+    .bolu{
+        height: max-content;
+        width: 80%;
+        /* padding: 40px 0; */
+    }
+  
 }
