--- a/src/app/files/navbar/navbar.component.css
+++ b/src/app/files/navbar/navbar.component.css
@@ -2,6 +2,8 @@
 .nav-item a {
     color: #000;
     transition: background-color 0.3s ease, color 0.3s ease;
+    border: 1px solid green;
+    border-radius: 10px;
 }
 nav{
     background-color: #e9f6e9 !important;
@@ -12,6 +14,7 @@ nav{
     z-index: 1;
     box-shadow: 1px 1px 1px 1px gold;
 }
+
 .cof{
     color:black !important;
 }
@@ -34,6 +37,15 @@ nav{
     }
     .navbar-nav .nav-item {
         width: 100%;
+    }
+    .nav-item a{
+        border: none;
+        border-bottom: 2px solid black;
+        
+        margin: 10px 0;
+    }
+    .nav-item{
+        padding: 10px;
     }
 }
 /* styles.css or the specific component's CSS file */
