done for now last commit

--- a/src/app/files/displaybudget/displaybudget.component.html
+++ b/src/app/files/displaybudget/displaybudget.component.html
@@ -87,7 +87,7 @@
                       <th>View</th>
                       <th>Edit</th>
                       <th>Delete</th>
-                      <th>Status</th>
+                      <th>Status (clickable)</th>
                     </tr>
                   </thead>
                   <tbody>
