--- a/src/app/files/footer/footer.component.css
+++ b/src/app/files/footer/footer.component.css
@@ -56,8 +56,8 @@ body {
 }
 .noq{
   position: fixed !important;
-  right: 10px;
-  bottom: 10px;
+  right: 2px;
+  bottom: 1px;
   padding: 20px;
   
 }
@@ -65,8 +65,8 @@ body {
   /* color: green; */
   border-radius: 100%;
   padding:12px;
-  border: 3px solid rgb(46, 223, 46);
-   background-color: green;
+  /* border: 3px solid rgb(46, 223, 46); */
+   background-color: rgba(26, 195, 26, 0.785);
    
   font-size: 30px;
   color: white;
