--- a/src/app/files/navbar/navbar.component.css
+++ b/src/app/files/navbar/navbar.component.css
@@ -40,7 +40,7 @@ nav{
     }
     .nav-item a{
         border: none;
-        border-bottom: 2px solid black;
+        border-bottom: 3px solid green;
         
         margin: 10px 0;
     }
